--- a/ansible/roles/traefik/handlers/main.yml
+++ b/ansible/roles/traefik/handlers/main.yml
@@ -1,11 +1,11 @@
 - name: reload proxy
-  community.docker.docker_stack:
-    state: present
-    name: "proxy"
-    compose:
-      - "{{ traefik_stack_file }}"
-    prune: true
+  ansible.builtin.shell: |
+    # This is a hacky way to pass all compose files in subdirectory to docker stack deploy
+    set -o pipefail
+    printf -- '--compose-file\0%s\0' {{ traefik_composed_location }}/*.yml | xargs -0 docker stack deploy --prune -c"{{ traefik_stack_file }}" proxy
   become: true
+  args:
+    executable: /bin/bash
 
 - name: wait for traefik
   command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n traefik proxy"
