--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -20,7 +20,7 @@
     content: "{{ template_partial }}"
     state: present
     validate: docker-compose -f %s config -q
-    marker: "# {mark} ANSIBLE MANAGED BLOCK for {{role_name}}"
+    marker: "# {mark} ANSIBLE MANAGED BLOCK for {{ role_name }}"
     insertafter: "services:"
   notify:
     - reload stack
@@ -44,7 +44,7 @@
 - name: Restore dump
   args:
     executable: /bin/bash
-  shell: |
+  ansible.builtin.shell: |
     set -o pipefail
     cat {{ dump_location }} | docker exec -i $(docker ps -q -f name={{ stack_name }}_mariadb) /usr/bin/mariadb -p{{ reims2_db_root_password }} {{ reims2_db_name }}
   when: db_dump is not false
