--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,11 +1,18 @@
 ---
 roles:
   - name: jnv.unattended-upgrades
+    version: v1.12.2
   - name: geerlingguy.swap
+    version: 1.0.2
   - name: geerlingguy.docker
+    version: 6.0.4
 
 collections:
   - name: devsec.hardening
+    version: 8.6.0
   - name: community.general
+    version: 6.5.0
   - name: community.mysql
+    version: 3.6.0
   - name: community.docker
+    version: 3.4.8
