pass inventory in action

--- a/ansible/.github/workflows/deploy.yml
+++ b/ansible/.github/workflows/deploy.yml
@@ -18,4 +18,6 @@ jobs:
           key: ${{secrets.SSH_PRIVATE_KEY}}
           vault_password: ${{secrets.VAULT_PASSWORD}}
           requirements: requirements.yml
-    
+          options: |
+            --inventory hosts
+          
