allow failed lookup

--- a/ansible/roles/update_script/tasks/main.yml
+++ b/ansible/roles/update_script/tasks/main.yml
@@ -12,6 +12,7 @@
     user: actions
     state: present
     key: "{{ lookup('file', 'creds/deploy_key.pub') }}"
+  ignore_errors: true
 
 - name: Create directories
   ansible.builtin.file:
