fix dump lookup

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -70,7 +70,7 @@
     stack_name: dev-reims2
     app_domain: dev.reims2.app
     reset_docker_stack: true
-    db_dump: "{{ lookup('file', 'dump.sql', errors='warn') }}"
+    db_dump: "{{ lookup('file', 'dump.sql') }}"
     reims2_db_password: reims
     reims2_db_root_password: root
     reims2_jwt_secret: thisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthis
