--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -35,11 +35,12 @@
     group: root
     force: true
   register: dump_file
+  ignore_errors: true
   when: db_dump is not false
 
 - name: Flush handlers to make restoring dump possible
   ansible.builtin.meta: flush_handlers
-  when: db_dump is not false
+  when: db_dump is not false and not dump_file.failed
 
 - name: Restore dump
   args:
@@ -47,4 +48,4 @@
   ansible.builtin.shell: |
     set -o pipefail
     cat {{ dump_location }} | docker exec -i $(docker ps -q -f name={{ stack_name }}_mariadb) /usr/bin/mariadb -p{{ reims2_db_root_password }} {{ reims2_db_name }}
-  when: db_dump is not false
+  when: db_dump is not false and not dump_file.failed
