fix bug in force option

--- a/ansible/roles/docker_stack/tasks/main.yml
+++ b/ansible/roles/docker_stack/tasks/main.yml
@@ -55,6 +55,6 @@
     mode: "0660"
     owner: "root"
     group: "docker"
-    force: reset_docker_stack
+    force: "{{reset_docker_stack}}"
   become: true
   notify: reload stack
