--- a/ansible/roles/setup/tasks/main.yml
+++ b/ansible/roles/setup/tasks/main.yml
@@ -3,6 +3,7 @@
     user: "{{ ansible_user }}"
     state: present
     key: "{{ lookup('file', 'creds/pub_keys') }}"
+  ignore_errors: true
 
 - name: Enable auto upgrade
   ansible.builtin.include_role:
