--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,55 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore .",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "3.0.1",
-    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
-    "@nuxtjs/axios": "5.13.6",
-    "@nuxtjs/dayjs": "1.4.1",
-    "@nuxtjs/pwa": "3.3.5",
-    "chroma-js": "2.4.2",
-    "core-js": "3.31.0",
-    "nuxt": "2.17.0",
-    "nuxt-route-meta": "2.3.6",
-    "vue": "2.7.14",
-    "vue-shortkey": "3.1.7",
-    "vuex": "3.6.2",
-    "vuex-persistedstate": "4.1.0"
+    "@mdi/font": "7.0.96",
+    "pinia": "^2.0.23",
+    "roboto-fontface": "*",
+    "vue": "^3.2.0",
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@mdi/js": "7.2.96",
-    "@nuxt/types": "2.17.0",
-    "@nuxt/typescript-build": "3.0.1",
-    "@nuxtjs/eslint-config-typescript": "12.0.0",
-    "@nuxtjs/eslint-module": "3.1.0",
-    "@nuxtjs/google-fonts": "3.0.1",
-    "@nuxtjs/vuetify": "1.12.3",
-    "@types/chroma-js": "2.4.0",
-    "@types/jest": "29.5.2",
-    "eslint": "8.44.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.15.1",
-    "jest": "29.5.0",
-    "jest-extended": "4.0.0",
-    "ts-jest": "29.1.1",
-    "ts-loader": "8.4.0",
-    "typescript": "4.9.5",
-    "vue-enter-to-tab": "1.0.2",
-    "webpack": "4.46.0"
-  },
-  "packageManager": "yarn@3.6.1"
+    "@babel/types": "^7.21.4",
+    "@types/node": "^18.15.0",
+    "@types/webfontloader": "^1.6.35",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^4.2.0",
+    "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue-tsc": "^1.2.0"
+  }
 }
