--- a/ansible/roles/docker_stack/tasks/main.yml
+++ b/ansible/roles/docker_stack/tasks/main.yml
@@ -42,7 +42,7 @@
     mode: "0660"
     owner: "root"
     group: "docker"
-    force: false
+    force: true
   notify:
     - reload proxy
     - wait for traefik
