--- a/frontend/.github/renovate.json
+++ b/frontend/.github/renovate.json
@@ -1,7 +1,6 @@
-{  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>reims2/renovate"
-  ],
+{
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["github>reims2/renovate"],
   "packageRules": [
     {
       "matchPackageNames": [
