--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "node": "18.x"
   },
   "dependencies": {
-    "@mdi/font": "7.0.96",
     "axios": "^1.4.0",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
@@ -24,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
+    "@mdi/js": "^7.2.96",
     "@types/node": "^18.15.0",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -36,10 +36,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^3.0.0",
+    "sass": "^1.63.6",
     "typescript": "^5.0.0",
     "vite": "^4.2.0",
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-vuetify": "^1.0.0",
+    "vue-enter-to-tab": "^1.0.2",
     "vue-tsc": "^1.2.0"
   }
 }
