--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "format": "prettier .  --write"
+    "test": "jest"
   },
   "engines": {
     "node": "18.x"
@@ -26,19 +26,21 @@
   "devDependencies": {
     "@babel/types": "^7.21.4",
     "@mdi/js": "^7.2.96",
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.15.0",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^3.0.0",
+    "jest": "^29.6.1",
+    "jest-extended": "^4.0.0",
     "sass": "^1.63.6",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.0",
     "vite": "^4.2.0",
     "vite-plugin-pwa": "^0.16.4",
