--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-auth3": "^1.0.10",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
@@ -46,6 +47,7 @@
     "typescript": "^5.0.0",
     "vite": "^4.2.0",
     "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-vue-devtools": "^0.4.14",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-enter-to-tab": "^1.0.2",
     "vue-tsc": "^1.2.0"
