Also update reims2 packages with ansible to create reproducible state

--- a/ansible/.github/renovate.json
+++ b/ansible/.github/renovate.json
@@ -10,9 +10,10 @@
       "docker-compose\\.ya?ml(\\.j2)?$"
     ]
   },
-  "ignoreDeps": [
-    "reims2/reims2-frontend",
-    "reims2/reims2-backend",
-    "reims2/reims2-docs"
+  "packageRules": [
+    {
+      "matchPackagePrefixes": ["reims2"],
+      "groupName": "reims2",
+    }
   ]
 }
