--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,43 +13,43 @@
     "node": "18.x"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "chroma-js": "^2.4.2",
-    "dayjs": "^1.11.9",
-    "pinia": "^2.0.23",
-    "roboto-fontface": "*",
-    "vue": "^3.2.0",
-    "vue-auth3": "^1.0.10",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.0.0",
-    "webfontloader": "^1.0.0"
+    "axios": "1.4.0",
+    "chroma-js": "2.4.2",
+    "dayjs": "1.11.9",
+    "pinia": "2.1.4",
+    "roboto-fontface": "0.10.0",
+    "vue": "3.3.4",
+    "vue-auth3": "1.0.10",
+    "vue-router": "4.2.4",
+    "vuetify": "3.3.8",
+    "webfontloader": "1.6.28"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.4",
-    "@mdi/js": "^7.2.96",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^18.15.0",
-    "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.0.0",
-    "jest": "^29.6.1",
-    "jest-extended": "^4.0.0",
-    "prettier": "^3.0.0",
-    "sass": "^1.63.6",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.2.0",
-    "vite-plugin-pwa": "^0.16.4",
-    "vite-plugin-vue-devtools": "^0.4.14",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vue-enter-to-tab": "^1.0.2",
-    "vue-tsc": "^1.2.0"
+    "@babel/types": "7.22.5",
+    "@mdi/js": "7.2.96",
+    "@types/jest": "29.5.3",
+    "@types/node": "20.4.2",
+    "@types/webfontloader": "1.6.35",
+    "@vitejs/plugin-vue": "4.2.3",
+    "@vue/eslint-config-typescript": "11.0.3",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "16.0.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-vue": "9.15.1",
+    "jest": "29.6.1",
+    "jest-extended": "4.0.0",
+    "prettier": "3.0.0",
+    "sass": "1.63.6",
+    "ts-jest": "29.1.1",
+    "typescript": "5.1.6",
+    "vite": "4.4.3",
+    "vite-plugin-pwa": "0.16.4",
+    "vite-plugin-vue-devtools": "0.5.1",
+    "vite-plugin-vuetify": "1.0.2",
+    "vue-enter-to-tab": "1.0.2",
+    "vue-tsc": "1.8.4"
   }
 }
