remove pin on reims deps (revert 1ff3ccb6e37a54b1ee28051a94192194bf43491d)

--- a/ansible/.github/renovate.json
+++ b/ansible/.github/renovate.json
@@ -10,11 +10,9 @@
       "docker-compose\\.ya?ml(\\.j2)?$"
     ]
   },
-  "packageRules": [
-    {
-      "matchPackagePrefixes": ["reims2"],
-      "groupName": "reims2",
-      "automerge": true
-    }
+  "ignoreDeps": [
+    "reims2/reims2-frontend",
+    "reims2/reims2-backend",
+    "reims2/reims2-docs"
   ]
 }
