--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -20,19 +20,16 @@
       "type": "node",
       "runtimeVersion": "16.19.0",
       "request": "launch",
-      "name": "Nuxt Server",
+      "name": "Vite Dev",
       "args": ["dev"],
       "outputCapture": "std",
       "linux": {
-        "program": "${workspaceFolder}/node_modules/.bin/nuxt"
-      },
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
+        "program": "${workspaceFolder}/node_modules/.bin/vite"
       },
       "env": {
-        //"API_URL": "http://localhost:9966", // local API
-        "API_URL": "https://dev.reims2.app", // for AXIOS
-        "PVH_DEBUG": "true"
+        //"VITE_API_URL": "https://dev.reims2.app", // use remote API (doesnt work yet)
+        "VITE_GIT_VERSION": "190234912639asd",
+        "VITE_PVH_DEBUG": "true"
       }
     },
     {
