--- a/frontend/.github/renovate.json
+++ b/frontend/.github/renovate.json
@@ -1,17 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>reims2/renovate"],
-  "packageRules": [
-    {
-      "matchPackageNames": [
-        "vue",
-        "nuxt",
-        "webpack",
-        "nuxt-route-meta",
-        "ts-loader"
-      ],
-      "matchUpdateTypes": ["major"],
-      "enabled": false
-    }
-  ]
+  "extends": ["github>reims2/renovate"]
 }
