--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,7 @@
     "typescript": "5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "vite": "4.4.4",
-    "vite-plugin-compression": "0.5.1",
+    "vite-plugin-compression2": "0.10.3",
     "vite-plugin-pwa": "0.16.4",
     "vite-plugin-vue-devtools": "0.5.1",
     "vite-plugin-vuetify": "1.0.2",
