fix sha in PRs, see https://github.com/docker/metadata-action/issues/206

--- a/actions/.github/workflows/deploy.yml
+++ b/actions/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
           tags: |
             type=sha,priority=2000
             type=semver,pattern={{version}},priority=2100
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: true
 
       - name: Get image name (temporary workaround)
         run: |
