--- a/actions/.github/workflows/docker.yml
+++ b/actions/.github/workflows/docker.yml
@@ -50,6 +50,8 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
             # Always keep SHA for deploy script to work!
             type=sha
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: true
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
