--- a/actions/.github/workflows/deploy-instance.yml
+++ b/actions/.github/workflows/deploy-instance.yml
@@ -37,7 +37,7 @@ jobs:
           repository: reims2/reims2-ansible-playbook
       - name: Write SQL dump to file
         run: |
-          echo "${{ env.SQL_DUMP }}" > dump.sql
+          echo "$SQL_DUMP" > dump.sql
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@5d970176ea4bfd99a3f5004d48e293fe0994eda1 # v2
         with:
