--- a/ansible/deploy-single-stack.yml
+++ b/ansible/deploy-single-stack.yml
@@ -10,4 +10,5 @@
     reset_docker_stack: true
     reims2_db_password: reims
     reims2_db_root_password: root
+    db_dump: "{{ lookup('file', 'dump.example.sql') }}"
     reims2_jwt_secret: thisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthisisalongtestokenthis
