renamed ansible playbook

--- a/actions/.github/workflows/deploy-instance.yml
+++ b/actions/.github/workflows/deploy-instance.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@5d970176ea4bfd99a3f5004d48e293fe0994eda1 # v2
         with:
-          playbook: single-instance.yml
+          playbook: deploy-single-stack.yml
           key: ${{secrets.ANSIBLE_PRIVATE_KEY}}
           requirements: requirements.yml
           options: |
