Revert "always run restore for now"
This reverts commit 4e07662cfb9632616fc2e386af9d51a88f0578de.

--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -27,6 +27,7 @@
     - wait for mariadb
 
 - name: SQL restore block
+  when: db_dump is not false
   block:
     - name: Copy SQL dump file onto host
       ansible.builtin.copy:
