use toast notification library

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,40 +19,41 @@
     "axios": "1.4.0",
     "chroma-js": "2.4.2",
     "dayjs": "1.11.9",
-    "jwt-decode": "^3.1.2",
-    "pinia": "2.1.4",
-    "pinia-plugin-persistedstate": "3.1.0",
+    "jwt-decode": "3.1.2",
+    "pinia": "2.1.6",
+    "pinia-plugin-persistedstate": "3.2.0",
     "vue": "3.3.4",
     "vue-router": "4.2.4",
-    "vuetify": "3.3.9"
+    "vue-toastification": "2.0.0-rc.5",
+    "vuetify": "3.3.10"
   },
   "devDependencies": {
     "@babel/types": "7.22.5",
     "@mdi/js": "7.2.96",
     "@types/chroma-js": "2.4.0",
     "@types/jest": "29.5.3",
-    "@types/node": "20.4.2",
-    "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "@types/node": "20.4.5",
+    "@vitejs/plugin-basic-ssl": "1.0.1",
     "@vitejs/plugin-vue": "4.2.3",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "eslint": "8.45.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-prettier": "8.9.0",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "2.28.0",
     "eslint-plugin-n": "16.0.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-vue": "9.15.1",
     "prettier": "3.0.0",
-    "sass": "1.64.0",
+    "sass": "1.64.1",
     "typescript": "5.1.6",
-    "unplugin-auto-import": "^0.16.6",
-    "vite": "4.4.6",
+    "unplugin-auto-import": "0.16.6",
+    "vite": "4.4.7",
     "vite-plugin-compression2": "0.10.3",
     "vite-plugin-pwa": "0.16.4",
-    "vite-plugin-vue-devtools": "0.5.1",
+    "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vite-plugin-vuetify": "1.0.2",
     "vitest": "0.33.0",
-    "vue-tsc": "1.8.5"
+    "vue-tsc": "1.8.8"
   }
 }
