--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --ui"
   },
   "engines": {
     "node": "18.x"
@@ -29,11 +30,12 @@
   "devDependencies": {
     "@babel/types": "7.22.5",
     "@mdi/js": "7.2.96",
-    "@types/chroma-js": "2.4.0",
+    "@testing-library/vue": "7.0.0",
     "@types/jest": "29.5.3",
     "@types/node": "20.4.5",
     "@vitejs/plugin-vue": "4.2.3",
     "@vitest/coverage-v8": "0.33.0",
+    "@vitest/ui": "0.33.0",
     "@vue/eslint-config-typescript": "11.0.3",
     "eslint": "8.46.0",
     "eslint-config-prettier": "8.9.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-n": "16.0.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-vue": "9.15.1",
+    "happy-dom": "10.5.2",
     "prettier": "3.0.0",
     "sass": "1.64.1",
     "typescript": "5.1.6",
@@ -49,7 +52,7 @@
     "vite": "4.4.7",
     "vite-plugin-compression2": "0.10.3",
     "vite-plugin-pwa": "0.16.4",
-    "vite-plugin-vue-devtools": "1.0.0-beta.5",
+    "vite-plugin-vue-devtools": "1.0.0-beta.6",
     "vite-plugin-vuetify": "1.0.2",
     "vitest": "0.33.0",
     "vue-tsc": "1.8.8"
