--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "test": "vitest run --coverage",
-    "test:watch": "vitest --ui"
+    "test:watch": "vitest --ui --coverage"
   },
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "@fontsource-variable/inter": "5.0.5",
-    "@vueuse/core": "10.2.1",
+    "@fontsource-variable/inter": "5.0.7",
+    "@vueuse/core": "10.3.0",
     "axios": "1.4.0",
     "dayjs": "1.11.9",
     "jwt-decode": "3.1.2",
@@ -25,36 +25,36 @@
     "vue": "3.3.4",
     "vue-router": "4.2.4",
     "vue-toastification": "2.0.0-rc.5",
-    "vuetify": "3.3.10"
+    "vuetify": "3.3.11"
   },
   "devDependencies": {
     "@babel/types": "7.22.5",
     "@mdi/js": "7.2.96",
     "@testing-library/vue": "7.0.0",
     "@types/jest": "29.5.3",
-    "@types/node": "20.4.5",
+    "@types/node": "20.4.6",
     "@vitejs/plugin-vue": "4.2.3",
-    "@vitest/coverage-v8": "0.33.0",
-    "@vitest/ui": "0.33.0",
+    "@vitest/coverage-v8": "0.34.1",
+    "@vitest/ui": "0.34.1",
     "@vue/eslint-config-typescript": "11.0.3",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "8.9.0",
+    "eslint-config-prettier": "8.10.0",
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.28.0",
     "eslint-plugin-n": "16.0.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.15.1",
-    "happy-dom": "10.5.2",
-    "prettier": "3.0.0",
-    "sass": "1.64.1",
+    "eslint-plugin-vue": "9.16.1",
+    "happy-dom": "10.7.0",
+    "prettier": "3.0.1",
+    "sass": "1.64.2",
     "typescript": "5.1.6",
     "unplugin-auto-import": "0.16.6",
-    "vite": "4.4.7",
+    "vite": "4.4.8",
     "vite-plugin-compression2": "0.10.3",
     "vite-plugin-pwa": "0.16.4",
     "vite-plugin-vue-devtools": "1.0.0-beta.6",
     "vite-plugin-vuetify": "1.0.2",
-    "vitest": "0.33.0",
+    "vitest": "0.34.1",
     "vue-tsc": "1.8.8"
   }
 }
