--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/types": "7.22.10",
     "@mdi/js": "7.2.96",
+    "@pinia/testing": "0.1.3",
     "@testing-library/vue": "7.0.0",
     "@types/jest": "29.5.3",
     "@types/node": "20.4.9",
