readd automatic dev deploy and add pr deploy

--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -6,12 +6,18 @@ on:
       - "**"
     tags: ["v*.*.*"]
   pull_request:
+    types:
+      - "opened"
+      - "synchronize"
+      - "reopened"
+      - "labeled"
   merge_group:
   workflow_dispatch:
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+    if: ${{ github.event.action != 'labeled' }}
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
       - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3
@@ -28,11 +34,10 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: advanced-security/maven-dependency-submission-action@d682d5d68a398c90e9b35f8c564cd8e1918d6a24 # v3
 
-
   docker:
     uses: reims2/actions/.github/workflows/docker.yml@main
-    concurrency: docker-${{ github.ref }}
-    if: ${{ github.event_name != 'merge_group' }}
+    concurrency: docker-backend-${{ github.ref }}
+    if: ${{ github.event_name != 'merge_group' && github.event.action != 'labeled' }}
     secrets: inherit # pass all secrets
 
   deploy:
@@ -47,9 +52,17 @@ jobs:
   dev-deploy:
     needs:
       - docker
-      - ci # since we don"t execute tests in docker build
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/dev'
     uses: reims2/actions/.github/workflows/dev-deploy.yml@main
     concurrency: dev-deploy-${{ github.repository }}
     secrets: inherit # pass all secrets
-      
+
+  pr-deploy:
+    needs:
+      - docker
+    if: ${{ (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'deploy')) }}
+    uses: reims2/actions/.github/workflows/deploy-instance.yml@main
+    concurrency: pr-deploy-backend-${{ github.ref }}
+    with:
+      instance_name: backend-pr-${{ github.event.number || 'unknown' }}
+    secrets: inherit # pass all secrets
