--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "test:watch": "vitest --ui --coverage"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.5.1"
   },
   "dependencies": {
     "@fontsource-variable/roboto-flex": "5.0.8",
