Change to Java 17 - Implement some more validation - Change to Spring boot 3  (#62)
* feature: upgrade spring boot version + added validation

* chore: clean up code

* Change to java 17

* fix: update tests and fixed one cast

* fix: more validation instead of 500

* improve hibernate config based on server log output

--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -5,9 +5,10 @@ spring.datasource.url = jdbc:mariadb://${DATABASE_HOST}:${DATABASE_PORT}/${DATAB
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
 # automatically generate schema, put update it only (don't drop data)
 spring.jpa.hibernate.ddl-auto=update
+# reduce connection maximum lifetime to avoid closed connections on DB
+spring.datasource.hikari.max-lifetime=600000
 #----------------------------------------------------------------
 # MySQL config end
