--- a/ansible/roles/monitoring/handlers/main.yml
+++ b/ansible/roles/monitoring/handlers/main.yml
@@ -1,9 +1,4 @@
-- name: reload prometheus
-  ansible.builtin.service:
-    name: prometheus
-    state: restarted
-
-- name: reload grafana
+- name: reload monitoring
   community.docker.docker_stack:
     state: present
     name: "monitoring"
@@ -13,4 +8,7 @@
   become: true
 
 - name: wait for grafana
+  ansible.builtin.command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n grafana monitoring"
+
+- name: wait for prometheus
   ansible.builtin.command: "docker run --rm -i -v /var/run/docker.sock:/var/run/docker.sock sudobmitch/docker-stack-wait -n grafana monitoring"
