--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -1,9 +1,3 @@
-- name: Install packages
-  ansible.builtin.package:
-    name:
-      - prometheus
-    state: present
-
 - name: Create install directory
   ansible.builtin.file:
     path: "{{ item }}"
@@ -13,6 +7,7 @@
     group: "root"
   with_items:
     - "{{ grafana_install_location }}"
+    - "{{ prometheus_install_location }}"
   become: true
 
 - name: Create data directories
@@ -24,9 +19,8 @@
     group: "root"
   with_items:
     - "{{ grafana_data_location }}"
+    - "{{ prometheus_data_location }}"
   become: true
-  tags:
-    - grafana
 
 - name: Create docker-compose.yml
   ansible.builtin.template:
@@ -38,18 +32,19 @@
     validate: docker-compose -f %s config -q
   become: true
   notify:
-    - reload grafana
+    - reload monitoring
     - wait for grafana
 
 - name: Copy prometheus config
   ansible.builtin.copy:
     src: prometheus.yml
-    dest: /etc/prometheus/prometheus.yml
+    dest: "{{ prometheus_config_location }}"
     owner: root
     group: root
     mode: "0644"
   notify:
-    - reload prometheus
+    - reload monitoring
+    - wait for prometheus
 # - name: Expose DB tasks
 #  ansible.builtin.include_tasks: expose_db.yml
 #  vars:
