feat: set mariadb userstat config var using cnf file

--- a/ansible/roles/mariadb/defaults/main.yml
+++ b/ansible/roles/mariadb/defaults/main.yml
@@ -7,3 +7,4 @@ db_port: 3306
 
 db_dump: false
 dump_location: "{{ stack_install_location }}/dump.sql"
+mariadb_cnf_location: "{{ stack_install_location }}/mariadb_custom.cnf"
