feat: provision grafana datasources automatically

--- a/ansible/roles/monitoring/defaults/main.yml
+++ b/ansible/roles/monitoring/defaults/main.yml
@@ -1,8 +1,10 @@
 ---
 monitoring_domain: monitoring.{{ app_domain }}
 monitoring_network: monitoring
+
 grafana_install_location: "/srv/grafana"
 grafana_data_location: "{{ grafana_install_location }}/data"
+grafana_provisioning_location: "{{ grafana_install_location }}/provisioning"
 
 prometheus_install_location: "/srv/prometheus"
 prometheus_data_location: "{{ prometheus_install_location }}/data"
