fix renovate auto update

--- a/ansible/roles/s3backup/defaults/main.yml
+++ b/ansible/roles/s3backup/defaults/main.yml
@@ -4,7 +4,7 @@ s3backup_install_location: "{{ stack_install_location }}/s3backup"
 s3backup_data_location: "{{ s3backup_install_location }}/data"
 
 # The traefik/dockersocketproxy version to be used
-# renovate: depName=docker.io/dokku/s3backup
+# renovate: datasource=docker depName=docker.io/dokku/s3backup
 s3backup_version: 0.14.0
 
 aws_bucket_name: reims2-backup
