feat: Add actuator with endpoint for prometheus (#116)
* feat: enable actuator, with prometheus support

* fix: allow unauthenticated access to actuator

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,3 +39,6 @@ pvh.app.jwtSecret=${PVH_JWT_SECRET}
 pvh.app.jwtExpirationMs=4838400000
 # enable debug logging via PVH_DEBUG env var, defaults to false
 pvh.debug.enable =${PVH_DEBUG:false}
+
+# expose all actuator endpoints
+management.endpoints.web.exposure.include=*
