build(docker): use layered jar approach, use alpine image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,32 @@
 FROM eclipse-temurin:21.0.1_12-jdk-jammy@sha256:be4ab5981c87d4db5c2e9ef2bc52a4a69e3884cd89b9b6148cc3939c9a6bd703 AS build
-RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
 
 ENV PORT 5000
 WORKDIR /usr/src/app
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN --mount=type=cache,target=/root/.m2 ./mvnw dependency:go-offline
+
 COPY ./src ./src
 RUN --mount=type=cache,target=/root/.m2 ./mvnw clean install -DskipTests
 
+WORKDIR /usr/src/app/target
+RUN java -Djarmode=layertools -jar ./*.jar extract
+
 # PROD IMAGE
-FROM eclipse-temurin:21.0.1_12-jre-jammy@sha256:e96937d9cd9113e3616fc32499674f6aec83bc2e21e97ac2a4a0bd543f44225a
-RUN apt-get update && apt-get upgrade -y && apt install curl -y && rm -rf /var/lib/apt/lists/*
+FROM eclipse-temurin:21.0.1_12-jre-alpine
+RUN apk add dumb-init
 
 ENV HOST 0.0.0.0
 ENV PORT 5000
+EXPOSE $PORT
 
 WORKDIR /usr/src/app
-COPY --from=build /usr/bin/dumb-init /usr/bin/dumb-init
-COPY --from=build /usr/src/app/target/*.jar ./app.jar
+COPY --from=build /usr/src/app/target/dependencies/ ./
+COPY --from=build /usr/src/app/target/spring-boot-loader/ ./
+COPY --from=build /usr/src/app/target/snapshot-dependencies/ ./
+COPY --from=build /usr/src/app/target/application/ ./
 
-EXPOSE 5000
-
-HEALTHCHECK --interval=5s --timeout=10s --retries=5 --start-period=20s CMD curl --fail http://localhost:$PORT/api || exit 1   
-
+HEALTHCHECK --interval=5s --timeout=10s --retries=5 --start-period=20s CMD wget -nv -t1 --spider http://localhost:$PORT/api || exit 1   
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["java",  "-jar", "/usr/src/app/app.jar", "--spring.profiles.active=prod" ]
+CMD ["java", "org.springframework.boot.loader.launch.JarLauncher", "--spring.profiles.active=prod" ]
