fix(ci): install required dep

--- a/ansible/.github/workflows/deploy.yml
+++ b/ansible/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
+      - name: Install dependencies
+        run: npm install conventional-changelog-conventionalcommits
       - name: Release new version
         run: npx semantic-release
         env:
